fix: Quill fields and rendreing fix via CSS and HTML sanitizer

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 ###< symfony/phpunit-bridge ###
 
 # /public/img/article/*
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
